--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'com.codeborne:selenide:6.13.0'
+    testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'mysql:mysql-connector-java:8.0.18'
 
 }
@@ -23,7 +23,7 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'db.url', System.getProperty('db.url', "jdbc://localhost:3306/app")
+    systemProperty 'dbMySQL.url', System.getProperty('dbMySQL.url', "jdbc:mysql://localhost:3306/app")
 
 
 }
